--- a/metrics.ipynb
+++ b/metrics.ipynb
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6cc3666b",
+   "id": "9d92a0fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "6b595f80",
    "metadata": {},
    "outputs": [
@@ -394,20 +394,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exact match: Pearson Correlation: 0.5069270526522721\n",
-      "Exact match: Spearman Correlation: 0.41646952132008896\n",
+      "Exact match: Pearson Correlation: 0.51\n",
+      "Exact match: Spearman Correlation: 0.42\n",
       "\n",
-      "CHRF: Pearson Correlation: 0.7667403947283443\n",
-      "CHRF: Spearman Correlation: 0.7084996745431696\n",
+      "CHRF: Pearson Correlation: 0.77\n",
+      "CHRF: Spearman Correlation: 0.71\n",
       "\n",
-      "BLEU: Pearson Correlation: 0.7599475379181952\n",
-      "BLEU: Spearman Correlation: 0.7864677118487128\n",
+      "BLEU: Pearson Correlation: 0.76\n",
+      "BLEU: Spearman Correlation: 0.79\n",
       "\n",
-      "ROUGE-L: Pearson Correlation: 0.8386877839096292\n",
-      "ROUGE-L: Spearman Correlation: 0.6993378380873106\n",
+      "ROUGE-L: Pearson Correlation: 0.84\n",
+      "ROUGE-L: Spearman Correlation: 0.70\n",
       "\n",
-      "Levenshtein: Pearson Correlation: -0.45974165680534135\n",
-      "Levenshtein: Spearman Correlation: -0.4383670766237179\n"
+      "Levenshtein: Pearson Correlation: -0.46\n",
+      "Levenshtein: Spearman Correlation: -0.44\n"
      ]
     }
    ],
@@ -434,8 +434,8 @@
     "    if i != 0:\n",
     "        print()\n",
     "        \n",
-    "    print(f\"{metric_name}: Pearson Correlation: {pearson_corr}\")\n",
-    "    print(f\"{metric_name}: Spearman Correlation: {spearman_corr}\")"
+    "    print(f\"{metric_name}: Pearson Correlation: {pearson_corr:.2f}\")\n",
+    "    print(f\"{metric_name}: Spearman Correlation: {spearman_corr:.2f}\")"
    ]
   },
   {
@@ -453,7 +453,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "8546de87",
+   "id": "c43e239e",
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +512,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "53bd0dfa",
+   "id": "ea9a1f53",
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5aff569c",
+   "id": "e86eb598",
    "metadata": {},
    "outputs": [
     {
