Add readme.md Add review.md Add human readable dataset in .txt format Restructure project

--- a/src/metrics.ipynb
+++ b/src/metrics.ipynb
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9d92a0fc",
+   "id": "d672881b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "id": "6b595f80",
    "metadata": {},
    "outputs": [
@@ -394,6 +394,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "--------------------------------------------------\n",
+      "Correlation of review labels with automatic metrics:\n",
+      "--------------------------------------------------\n",
+      "\n",
       "Exact match: Pearson Correlation: 0.51\n",
       "Exact match: Spearman Correlation: 0.42\n",
       "\n",
@@ -427,15 +431,17 @@
     "    'Levenshtein': levenshtein_scores\n",
     "}\n",
     "\n",
-    "for i, (metric_name, metric_scores) in enumerate(metrics.items()):\n",
+    "print('-' * 50)\n",
+    "print(\"Correlation of review labels with automatic metrics:\")\n",
+    "print('-' * 50)\n",
+    "\n",
+    "for metric_name, metric_scores in metrics.items():\n",
     "    pearson_corr, _ = pearsonr(review_labels, metric_scores)\n",
     "    spearman_corr, _ = spearmanr(review_labels, metric_scores)\n",
     "    \n",
-    "    if i != 0:\n",
-    "        print()\n",
-    "        \n",
-    "    print(f\"{metric_name}: Pearson Correlation: {pearson_corr:.2f}\")\n",
-    "    print(f\"{metric_name}: Spearman Correlation: {spearman_corr:.2f}\")"
+    "    print()\n",
+    "    print(f'{metric_name}: Pearson Correlation: {pearson_corr:.2f}')\n",
+    "    print(f'{metric_name}: Spearman Correlation: {spearman_corr:.2f}')"
    ]
   },
   {
@@ -453,7 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c43e239e",
+   "id": "83b5ad6a",
    "metadata": {},
    "outputs": [
     {
@@ -512,7 +518,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ea9a1f53",
+   "id": "09d15b17",
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "e86eb598",
+   "id": "1bdbaee0",
    "metadata": {},
    "outputs": [
     {
